fix spelling error

--- a/playground/src/pages/test.astro
+++ b/playground/src/pages/test.astro
@@ -8,7 +8,11 @@ const { merchant, categories, products} = commercejs
 ---
 
 <div>
+    <h1>This is a API Test Below is the JSON output from the API</h1>
+    <h2>Merchants</h2>
     <pre>{JSON.stringify(merchant, null, 2)}</pre>
+    <h2>Categories</h2>
     <pre>{JSON.stringify(categories, null, 2)}</pre>
+    <h2>Products</h2>
     <pre>{JSON.stringify(products, null, 2)}</pre>
 </div>
