--- a/playground/src/pages/index.astro
+++ b/playground/src/pages/index.astro
@@ -1,18 +1,21 @@
 ---
 import { AstroCommerceJS } from "@adammatthiesen/astro-commercejs";
+import { commerce } from "@adammatthiesen/astro-commercejs";
 
 const commercejs = await AstroCommerceJS();
-
 const { merchant, categories, products} = commercejs
 
+const merchantAbout = await commerce.merchants.about();
+
 ---
+<h1>{merchantAbout.business_name}</h1>
 
 <div>
-    <h1>This is a API Test Below is the JSON output from the API</h1>
-    <h2>Merchants</h2>
+    <h2>This is a API Test Below is the JSON output from the API</h2>
+    <h3>Merchants</h3>
     <pre>{JSON.stringify(merchant, null, 2)}</pre>
-    <h2>Categories</h2>
+    <h3>Categories</h3>
     <pre>{JSON.stringify(categories, null, 2)}</pre>
-    <h2>Products</h2>
+    <h3>Products</h3>
     <pre>{JSON.stringify(products, null, 2)}</pre>
 </div>
